Upgrade `ascension` to `^3.0.0-alpha.0`.
Ascension no longer has an extractor function. Instead we now use the
Whittle module to create a comparator decorator that whittles an object
down to a compound key for use with Ascension.

https://github.com/bigeasy/ascension/releases/tag/v3.0.0-alpha.0
https://github.com/bigeasy/whittle/releases/tag/v0.0.0

Closes #730.

--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     },
     "dependencies":
     {
-                            "ascension":                    "^2.0.0",
+                            "ascension":                    "^3.0.0-alpha.0",
                             "extant":                       "^1.0.11",
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "11.0.0-alpha.1",
                             "journalist":                   "0.1.7",
                             "prospective":                  "^0.3.0",
-                            "turnstile":                    "6.0.0-alpha.25"
+                            "turnstile":                    "6.0.0-alpha.25",
+                            "whittle":                      "0.0.0"
     },
     "devDependencies":
     {
