--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
                             "fracture":                     "0.3.0-alpha.20",
                             "interrupt":                    "11.0.0-alpha.13",
                             "journalist":                   "0.1.11",
+                            "magazine":                     "6.0.0-alpha.1",
                             "prospective":                  "^0.3.0",
                             "turnstile":                    "6.0.0-alpha.39",
                             "whittle":                      "0.0.0"
