--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
                             "journalist":                   "0.1.11",
                             "magazine":                     "6.0.0-alpha.1",
                             "prospective":                  "^0.3.0",
+                            "transcript":                   "0.1.3",
                             "turnstile":                    "6.0.0-alpha.39",
                             "whittle":                      "0.0.0"
     },
