Add release name to `package.json`.

--- a/package.json
+++ b/package.json
@@ -49,5 +49,9 @@
     "scripts":
     {
                             "test": "proof test/*.t.js"
+    },
+    "dots":
+    {
+                            "title":                        "Strata"
     }
 }
