--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
                             "fracture":                     "0.3.0-alpha.22",
                             "hash.fnv":                     "^1.0.5",
                             "interrupt":                    "11.0.0-alpha.14",
-                            "journalist":                   "0.1.15",
-                            "magazine":                     "6.0.0-alpha.2",
+                            "journalist":                   "0.1.16",
+                            "magazine":                     "6.0.0-alpha.4",
+                            "rescue":                       "7.0.0-alpha.8",
+                            "staccato":                     "^12.0.6",
                             "prospective":                  "^0.3.0",
                             "transcript":                   "0.1.3",
                             "turnstile":                    "6.0.0-alpha.42",
