--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
                             "interrupt":                    "11.0.0-alpha.16",
                             "journalist":                   "0.1.19",
                             "magazine":                     "6.0.0-alpha.5",
+                            "perhaps":                      "0.0.2",
                             "rescue":                       "7.0.0-alpha.9",
                             "transcript":                   "0.1.4",
                             "turnstile":                    "6.0.0-alpha.43",
